--- a/src/view/doctor/Doctor.fxml
+++ b/src/view/doctor/Doctor.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTabPane?>
 <?import com.jfoenix.controls.JFXToolbar?>
 <?import com.jfoenix.controls.JFXTreeTableView?>
@@ -14,24 +15,31 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.doctor.DoctorController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.doctor.DoctorController">
    <children>
       <VBox alignment="TOP_CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <JFXToolbar style="-fx-background-color: #673AB7;">
+            <JFXToolbar style="-fx-background-color: #3F51B5;">
                <children>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" />
                </children>
                <right>
-                  <JFXButton onAction="#handleLogoutAction" style="-jfx-button-type: RAISED; -fx-background-color: #F44336; -fx-text-fill: #fff;" styleClass="raised-button" text="Logout" BorderPane.alignment="CENTER" />
+                  <JFXButton onAction="#handleLogoutAction" style="-jfx-button-type: RAISED; -fx-background-color: #ffc107; -fx-text-fill: #212121;" styleClass="raised-button" text="Logout" BorderPane.alignment="CENTER" />
                </right>
                <padding>
                   <Insets bottom="12.0" left="12.0" right="12.0" top="12.0" />
                </padding>
+               <left>
+                  <Label fx:id="docname" text="Joy" BorderPane.alignment="CENTER">
+                     <graphic>
+                        <Label text="Welcome Dr." />
+                     </graphic>
+                  </Label>
+               </left>
             </JFXToolbar>
             <JFXTabPane VBox.vgrow="ALWAYS">
                <tabs>
-                  <Tab closable="false" style="-fx-background-color: #673AB7;" text="Profile">
+                  <Tab closable="false" text="Profile">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -111,7 +119,7 @@
                         </AnchorPane>
                      </content>
                   </Tab>
-                  <Tab closable="false" style="-fx-background-color: #673AB7;" text="Patients">
+                  <Tab closable="false" text="Patients">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
@@ -123,6 +131,37 @@
                            </children>
                         </AnchorPane>
                      </content>
+                  </Tab>
+                  <Tab text="Change Password">
+                    <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <padding>
+                                    <Insets left="16.0" top="16.0" />
+                                 </padding>
+                                 <children>
+                                    <JFXPasswordField fx:id="opassword" promptText="Old Password" />
+                                    <JFXPasswordField fx:id="npassword" promptText="New Password">
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
+                                    </JFXPasswordField>
+                                    <JFXPasswordField fx:id="cpassword" promptText="Confirm Password">
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
+                                    </JFXPasswordField>
+                                    <JFXButton buttonType="RAISED" onAction="#handleChangePasswordAction" style="-fx-background-color: #3F51B5;" text="Change Password" textFill="WHITE">
+                                       <VBox.margin>
+                                          <Insets left="80.0" top="20.0" />
+                                       </VBox.margin>
+                                    </JFXButton>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </AnchorPane>
+                    </content>
                   </Tab>
                </tabs>
             </JFXTabPane>
