--- a/src/view/login/Login.fxml
+++ b/src/view/login/Login.fxml
@@ -4,44 +4,72 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXProgressBar?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.lang.Double?>
 <?import java.lang.String?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Polygon?>
 
-<VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
+<StackPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.login.LoginController">
    <children>
-      <JFXProgressBar fx:id="progress" focusTraversable="false" maxWidth="5000.0" prefWidth="600.0" visible="false" VBox.vgrow="ALWAYS">
-         <VBox.margin>
-            <Insets />
-         </VBox.margin>
-         <styleClass>
-            <String fx:value="jfx-progress-bar" />
-            <String fx:value="custom-jfx-progress-bar" />
-         </styleClass></JFXProgressBar>
-      <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
+      <Polygon fill="#ffc107" rotate="43.3" scaleX="3.0" scaleY="3.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" translateX="-160.0" translateY="50.0" StackPane.alignment="BOTTOM_RIGHT">
+         <points>
+            <Double fx:value="-50.0" />
+            <Double fx:value="40.0" />
+            <Double fx:value="50.0" />
+            <Double fx:value="40.0" />
+            <Double fx:value="0.0" />
+            <Double fx:value="-60.0" />
+         </points>
+      </Polygon>
+      <Polygon fill="#283593" rotate="15.7" scaleX="4.0" scaleY="4.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" StackPane.alignment="BOTTOM_RIGHT">
+        <points>
+          <Double fx:value="-50.0" />
+          <Double fx:value="40.0" />
+          <Double fx:value="50.0" />
+          <Double fx:value="40.0" />
+          <Double fx:value="0.0" />
+          <Double fx:value="-60.0" />
+        </points>
+      </Polygon>
+      <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0">
          <children>
-            <VBox fx:id="vbox" alignment="CENTER_RIGHT" prefHeight="400.0" prefWidth="319.0">
+            <JFXProgressBar fx:id="progress" focusTraversable="false" maxWidth="5000.0" prefWidth="600.0" visible="false" VBox.vgrow="ALWAYS">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <styleClass>
+                  <String fx:value="jfx-progress-bar" />
+                  <String fx:value="custom-jfx-progress-bar" />
+               </styleClass>
+            </JFXProgressBar>
+            <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
                <children>
-                  <JFXTextField fx:id="username" promptText="Username" text="admin" />
-                  <JFXPasswordField fx:id="password" promptText="Password" text="password">
-                     <VBox.margin>
-                        <Insets top="10.0" />
-                     </VBox.margin>
-                  </JFXPasswordField>
-                  <JFXButton buttonType="RAISED" onAction="#handleLoginAction" style="-fx-background-color: #673AB7;" text="Login" textFill="WHITE">
-                     <VBox.margin>
-                        <Insets right="8.0" top="20.0" />
-                     </VBox.margin>
-                  </JFXButton>
+                  <VBox fx:id="vbox" alignment="CENTER_RIGHT" prefHeight="400.0" prefWidth="319.0">
+                     <children>
+                        <JFXTextField fx:id="username" promptText="Username" />
+                        <JFXPasswordField fx:id="password" promptText="Password">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </JFXPasswordField>
+                        <JFXButton buttonType="RAISED" onAction="#handleLoginAction" style="-fx-background-color: #3F51B5;" text="Login" textFill="WHITE">
+                           <VBox.margin>
+                              <Insets right="8.0" top="20.0" />
+                           </VBox.margin>
+                        </JFXButton>
+                     </children>
+                  </VBox>
                </children>
-            </VBox>
+            </HBox>
          </children>
-      </HBox>
+         <stylesheets>
+            <URL value="@../../resources/css/jfoenix-components.css" />
+            <URL value="@../../resources/css/jfoenix-main-demo.css" />
+         </stylesheets>
+      </VBox>
    </children>
-   <stylesheets>
-      <URL value="@../../resources/css/jfoenix-components.css" />
-      <URL value="@../../resources/css/jfoenix-main-demo.css" />
-   </stylesheets>
-</VBox>
+</StackPane>
